# ufalign

./: LICENSE  README  README.md  README.release  TODO
aligner/: CMakeLists.txt  aligner.cpp  aligner.hpp  cl_opt.cpp  cl_opt.hpp  handler.cpp  handler.hpp
common/: cache.hpp  index_cfg.hpp  logger.cpp  logger.hpp  print_algn.cpp  print_algn.hpp
edlib/: make.sh
indexer/: CMakeLists.txt  indexer.cpp
test/: README
test/fasta/: README
test/profile_01/: profile.sh
test/test_01/aligner/: README  hits.sh  run.sh
test/test_01/mrfast/: README  hits.sh  run.sh
test/tools/seq_gen/: seq_gen.py
test/tools/seq_parse/: uppercase.sh
test/valgrind_01/: valgrind.sh
